[gd_scene load_steps=11 format=2]

[ext_resource path="res://blender/tresor/numpad.png" type="Texture" id=1]
[ext_resource path="res://blender/tresor/tresor_input.gd" type="Script" id=2]
[ext_resource path="res://UI/Cross.png" type="Texture" id=3]
[ext_resource path="res://blender/tresor/button1.png" type="Texture" id=4]
[ext_resource path="res://blender/tresor/button2.png" type="Texture" id=5]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://audio/tresoroeffnen.mp3" type="AudioStream" id=7]
[ext_resource path="res://audio/tastenklick.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 15
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[node name="TresorInput" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 181.0
margin_top = -15.0
margin_right = 629.0
margin_bottom = 379.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Digits" type="Label" parent="TextureRect"]
margin_left = 120.667
margin_top = 101.333
margin_right = 138.667
margin_bottom = 122.333
custom_fonts/font = SubResource( 2 )
align = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 792.0
margin_top = 501.0
margin_right = 837.0
margin_bottom = 548.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 3 )

[node name="1" type="TextureButton" parent="."]
margin_left = 517.0
margin_top = 127.0
margin_right = 646.0
margin_bottom = 255.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="1"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
rect_pivot_offset = Vector2( 74.074, 192.593 )
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="2" type="TextureButton" parent="."]
margin_left = 572.0
margin_top = 127.0
margin_right = 701.0
margin_bottom = 255.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="2"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1

[node name="3" type="TextureButton" parent="."]
margin_left = 625.0
margin_top = 127.0
margin_right = 754.0
margin_bottom = 260.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="3"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1

[node name="4" type="TextureButton" parent="."]
margin_left = 517.0
margin_top = 179.0
margin_right = 646.0
margin_bottom = 307.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="4"]
margin_left = 45.0
margin_top = 17.5
margin_right = 85.0
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "4"
align = 1

[node name="5" type="TextureButton" parent="."]
margin_left = 572.0
margin_top = 179.0
margin_right = 701.0
margin_bottom = 307.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="5"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "5"
align = 1

[node name="6" type="TextureButton" parent="."]
margin_left = 625.0
margin_top = 179.0
margin_right = 754.0
margin_bottom = 307.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="6"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "6"
align = 1

[node name="7" type="TextureButton" parent="."]
margin_left = 517.0
margin_top = 232.0
margin_right = 646.0
margin_bottom = 360.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="7"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "7"
align = 1

[node name="8" type="TextureButton" parent="."]
margin_left = 572.0
margin_top = 232.0
margin_right = 701.0
margin_bottom = 360.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="8"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 92.5005
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "8"
align = 1

[node name="9" type="TextureButton" parent="."]
margin_left = 625.0
margin_top = 232.0
margin_right = 754.0
margin_bottom = 360.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="9"]
margin_left = 45.0
margin_top = 17.5
margin_right = 84.9999
margin_bottom = 170.501
custom_colors/font_color = Color( 0.556863, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "9
"
align = 1

[node name="tresorOpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="pressKeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="9" to="." method="_on_9_pressed"]
